--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -106,6 +106,10 @@
   text-decoration: underline;
 }
 
+.pronouns-trigger.pinned .greeting-pronouns {
+  text-decoration: underline;
+}
+
 /* Media Query */
 @media (max-width: 1380px) {
   .greeting-text {
